--- a/themes/hd-theme/layouts/partials/footer.html
+++ b/themes/hd-theme/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer>
   <div>
     <p>
-    &copy; 2013-14 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name">Steve Francia.</span></span>
-    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved</a>; 
+    &copy; 2014-15 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+        <span itemprop="name">Hervé Darritchon.</span></span>
+    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved</a>;
     please attribute properly and link back. <br>
     Powered by <a href="http://gohugo.io">Hugo</a>.
         Hosted by <a href="http://servergrove.com">ServerGrove</a>.
